# arcLLM

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  coverage.json  decision-log.md  pyproject.toml
.claude/: arcllm-state.json  coverage-analysis-013.md  decision-log.md  settings.local.json
.claude/specs/001/: PLAN.md  PRD.md  README.md  SDD.md
.claude/specs/002-config-loading/: PLAN.md  PRD.md  README.md  SDD.md
.claude/specs/003-anthropic-adapter/: PLAN.md  PRD.md  SDD.md  (+1 more)
.claude/steering/: product.md  roadmap.md  structure.md  tech.md
docs/: arcllm-master-prompt.md  arcllm-prd.md  arcllm-security-analysis.md  security.md
src/arcllm/: __init__.py  _pii.py  _signing.py  config.py  config.toml  exceptions.py  registry.py  types.py  vault.py
tests/: test_agentic_loop.py  test_anthropic.py  test_audit.py  test_base_module.py  test_config.py  test_fallback.py  test_init.py  test_logging_helper.py  test_mistral.py  test_module_base.py  test_open_providers.py  test_openai.py  test_otel.py  test_otel_integration.py  test_pii.py  test_rate_limit.py  test_registry.py  test_retry.py  test_security.py  test_signing.py  test_telemetry.py  test_types.py  test_vault.py
walkthrough/: step_01_core_types.ipynb  step_02_config_loading.ipynb  step_03_anthropic_adapter.ipynb  step_04_agentic_loop.ipynb  step_05_openai_adapter.ipynb  step_06_provider_registry.ipynb  step_07_module_system.ipynb  step_08_rate_limiter.ipynb  step_09_telemetry_module.ipynb  step_10_audit_trail.ipynb  step_11_otel_export.ipynb  step_12_security_layer.ipynb  step_13_open_providers.ipynb
(+73 files in other folders)
